# Corpus-automation-and-conversion

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  PRD_unified.md  README.md  Step1_batch_word2pdf.py  Step2_batch_pdf_converter.py  Step3_organize_by_headings_llm.py  Step4_rewrite_markdown_headings.py  Step5_ontology_agent_v2.py  docker-compose.yaml  ontology_v2.json  pyproject.toml  requirements.txt  test_integration.py  （已压缩）5.6市政府报告3-21.md
Mineru_changed/北京地铁17号线工程土建施工08合同段“5.14”/auto/: 北京地铁17号线工程土建施工08合同段“5.14”.md  北京地铁17号线工程土建施工08合同段“5.14”_content_list.json  北京地铁17号线工程土建施工08合同段“5.14”_middle.json  北京地铁17号线工程土建施工08合同段“5.14”_model.json
backend/: __init__.py  celery.py  settings.py  urls.py
docs/: 01_需求分析.md  02_概要设计.md  03_详细设计.md  04_部署运维.md
input_file_mix/: ~$20年江苏润海油品销售有限公司石油库二期项目事故调查报告.docx
ontology_output_v2/: _processing_summary.json  北京地铁17号线工程土建施工08合同段“5.14”_memory.json  北京地铁17号线工程土建施工08合同段“5.14”_ontology.json
text_extraction/: apps.py  authentication.py  models.py  serializers.py  tasks.py  urls.py  views.py
text_extraction/migrations/: 0001_initial.py  0002_project_description_alter_project_ontology_path.py  0003_file_size.py
text_extraction/services/: __init__.py  file_storage.py  mineru_service.py  ontology_service.py
text_extraction/tests/: __init__.py  test_authentication.py  test_models.py  test_serializers.py  test_services.py  test_tasks.py  test_views.py
